trunk/Archive2/42/8c36ca8344c8b4/output
main.cpp: In instantiation of 'test(T&&)::<lambda(auto:1)> [with auto:1 = int; T = int]':
main.cpp:5:22:   required from 'void doLambda(T&&) [with T = test(T&&) [with T = int]::<lambda(auto:1)>]'
main.cpp:13:6:   required from 'void test(T&&) [with T = int]'
main.cpp:16:25:   required from here
main.cpp:12:38: error: 'mV' was not declared in this scope
         std::forward<decltype(mV)>(mV);
                                      ^
